// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headings > adds IDs and exports headings even when a custom heading is included 1`] = `
"<script module>
	export const slug = "test";
	export const headings = [{"level":1,"title":"This is some basic Markdoc","id":"this-is-some-basic-markdoc"},{"level":1,"title":"More fancy stuff","id":"more-fancy-stuff"}];
</script>
<article><h1 class="custom-heading" id="this-is-some-basic-markdoc">This is some basic Markdoc</h1><p>With a paragraph.</p><h1 class="custom-heading" id="more-fancy-stuff">More fancy stuff</h1><p>Content. Such great content.</p></article>"
`;

exports[`Headings > adds IDs and exports headings even when the custom heading is a custom component 1`] = `
"<script module>
	export const slug = "test";
</script>
<script>
	import HeadingComponent from '$lib/components/HeadingComponent.svelte';
</script>
<article><HeadingComponent id="this-is-some-basic-markdoc">This is some basic Markdoc</HeadingComponent><p>With a paragraph.</p><HeadingComponent id="more-fancy-stuff">More fancy stuff</HeadingComponent><p>Content. Such great content.</p></article>"
`;
